--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,18 @@
-#.travis.yml
-sudo: required  
-dist: trusty  
+sudo: required
+addons:
+  chrome: stable
+
 language: node_js
 node_js:
-  - "8.9"
+  - "8"
 
 branches:
   only:
     - master
 
-    
-before_install:  
- - export CHROME_BIN=/usr/bin/google-chrome
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
- - sudo apt-get update
- - sudo apt-get install -y libappindicator1 fonts-liberation
- - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
- - sudo dpkg -i google-chrome*.deb
-
 before_script:
   - npm install -g @angular/cli
 
 script:
-  - ng build --prod
-  - export CHROME_BIN=chromium-browser
-  - xvfb-run -a npm run test --single-run
-
-notifications:
-  email:
-    on_failure: change
-    on_success: change
+  - ng build --prod --aot
+  - ng test
