--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-sudo: required
-addons:
-  chrome: stable
-
+#.travis.yml
+sudo: required  
+dist: trusty  
 language: node_js
 node_js:
   - "8"
@@ -10,9 +9,26 @@ branches:
   only:
     - master
 
+    
+before_install:  
+ - export CHROME_BIN=/usr/bin/google-chrome
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ - sudo apt-get update
+ - sudo apt-get install -y libappindicator1 fonts-liberation
+ - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+ - sudo dpkg -i google-chrome*.deb
+
 before_script:
   - npm install -g @angular/cli
 
 script:
-  - ng build --prod --aot
-  - ng test
+  - ng build --prod --aot=false
+  - export CHROME_BIN=chromium-browser
+  - xvfb-run -a npm run test --single-run --no-progress
+
+
+notifications:
+  email:
+    on_failure: change
+    on_success: change
