--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - xvfb-run -a npm run test --single-run --no-progress
 
 
-notifications:
-  email:
-    on_failure: change
-    on_success: change
+#notifications:
+#  email:
+#    on_failure: change
+#    on_success: change
