testar utan test

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ before_script:
 script:
   - ng build --prod
   - export CHROME_BIN=chromium-browser
-  - xvfb-run -a npm run test --single-run --no-progress
+ # - xvfb-run -a npm run test --single-run --no-progress
 
 
-#notifications:
-#  email:
-#    on_failure: change
-#    on_success: change
+notifications:
+  email:
+    on_failure: change
+    on_success: change
