--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,7 @@ before_script:
 script:
   - ng build --prod
   - export CHROME_BIN=chromium-browser
-#  - xvfb-run -a npm run test --watch=false --no-progress 
-#  - npm run test 
-   - ng test --watch=false --no-progress 
+  - npm test --watch=false --no-progress 
 
 notifications:
   email:
